...
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/profile_pic_content" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/addFav_margin"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/white"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/neighbourName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fab_margin"
                android:layout_marginVertical="@dimen/fab_margin"
                android:textSize="@dimen/text_title_1" />

...
