<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_cardView_2">A propos de moi</string>
    <string name="back_btn_content">Back Button</string>
    <string name="profile_pic_content">Neighbour\'s profile picture</string>
    <string name="add_fav_button_content">Add to Favorites Button</string>
</resources>
